samples/three-tier-app/k8s/ap-deployment-v2.yaml
# k8s/ap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-deployment-v2
  labels:
    app: ap-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ap-v2
  template:
    metadata:
      labels:
        app: ap-v2
    spec:
      containers:
      - name: ap-container
        # Canary test 시, v0.1 배포 후, v0.2로 전환
        image: harbor.tanzu.lab/library/3ta-ap:v0.2 # AP 이미지 (빌드 후 푸시 필요)
        # public git
#        image: postout7979/3ta-ap:v0.1 # AP 이미지 (빌드 후 푸시 필요)
        ports:
        - containerPort: 5001
        livenessProbe:
          httpGet:
            path: /api/items # AP 서버의 엔드포인트
            port: 5001
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /api/items
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 10
