samples/three-tier-app/k8s/ap-service-v2.yaml
# k8s/ap-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: ap-service-v2 # WEB이 이 이름으로 AP에 접근
  labels:
    app: ap-v2
spec:
  selector:
    app: ap-v2
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 180 # seconds
  type: ClusterIP # 클러스터 내부에서만 접근 가능
