samples/three-tier-app/k8s/web-service-v2.yaml
# k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-v2
  labels:
    app: web-v2
spec:
  selector:
    app: web-v2
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 5000
  type: ClusterIP # 외부 접근용 (클라우드에서는 LoadBalancer 사용)
    #  type: LoadBalancer
