samples/three-tier-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 3ta-ingress
spec:
  rules:
  - host: 3ta-app.tanzu.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 5000
